# malaya-tagging-pipeline

./: CHANGELOG.md  README.md  RELEASE_PROCESS.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
src/malaya_tagging_pipeline/: __init__.py
tests/: model_download.py  test_system.py
